--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,33 +1,32 @@
-.navbar { 
-    height: 60px; 
-    display: flex; 
-    align-items: center; 
-    position: sticky; 
-    top: 0; 
-    z-index: 100; 
+.navbar {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
-
 
 .navbar__search {
-    display: flex; 
-    flex: 1; 
-    align-items: center; 
-    border-radius: 24px;
+  display: flex;
+  flex: 1;
+  align-items: center;
+  border-radius: 24px;
 }
 
-.navbar__searchInput { 
-    height: 12px; 
-    padding: 10px; 
-    border: light; 
-    width: 100%;
+.navbar__searchInput {
+  height: 12px;
+  padding: 10px;
+  border: light;
+  width: 100%;
 }
 
 .upperNavBar__options {
-    font-size: 10px;
-    font-weight: 500;
-    margin: 20px; 
+  font-size: 10px;
+  font-weight: 500;
+  margin: 20px;
 }
 
-.black { 
-    color: black 
+.black {
+  color: black;
 }
