--- a/src/styles/upperNavBar.css
+++ b/src/styles/upperNavBar.css
@@ -2,3 +2,17 @@
     height: 60px ; 
     width: 200px;
 }
+
+.navbar__searchInput { 
+    height: 35px; 
+    padding: 10px; 
+    margin-left: 50px; 
+    border: none; 
+    width: 70%; 
+    outline-color: black; 
+}
+
+.searchIcon { 
+    padding: 5px; 
+    background-color: #ff41DA;
+}
