--- a/src/styles/imageCarousel.css
+++ b/src/styles/imageCarousel.css
@@ -1,11 +1,8 @@
 .carousel {
     margin-top: 10px;
-    width: 100%;
+    width: 90%;
     max-height: 450px;
-    overflow: hidden
-  }
-
-  .carousel-item > img {
-    width: 100%; 
-    height: 100%;
+    overflow: hidden; 
+    margin-left: auto; 
+    margin-right: auto; 
   }
