--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  height: 60px;
+  height: 80px;
   display: flex;
   align-items: center;
   position: sticky;
@@ -7,19 +7,19 @@
   z-index: 100;
 }
 
-.navbar__search {
+/* .navbar__search {
   display: flex;
   flex: 1;
   align-items: center;
   border-radius: 24px;
-}
+} */
 
-.navbar__searchInput {
+/* .navbar__searchInput {
   height: 12px;
   padding: 10px;
   border: light;
   width: 100%;
-}
+} */
 
 .upperNavBar__options {
   font-size: 10px;
