--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,7 +1,7 @@
 .navbar {
   height: 80px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   position: sticky;
   top: 0;
   z-index: 100;
