--- a/src/styles/upperNavBar.css
+++ b/src/styles/upperNavBar.css
@@ -3,15 +3,6 @@
   width: 200px;
 }
 
-.nav-search {
-  background: yellow;
-  text-align: center;
-}
-
-.nav-search-input {
-  width: 1000px !important;
-}
-
 .nav-icon {
   padding: 3px;
   color: black;
@@ -25,4 +16,8 @@
   /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
   color: #ff41da;
+}
+
+.navbar-right {
+  float: right;
 }
