--- a/src/styles/imageCarousel.css
+++ b/src/styles/imageCarousel.css
@@ -1,7 +1,7 @@
 .carousel {
     margin-top: 10px;
-    width: 90%;
-    max-height: 450px;
+    width: 95%;
+    height: 80vh;
     overflow: hidden; 
     margin-left: auto; 
     margin-right: auto; 
