--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,30 +1,10 @@
 .navbar {
   height: 80px;
   display: flex;
-  /* align-items: center; */
   position: sticky;
   top: 0;
   z-index: 100;
-}
-
-/* .navbar__search {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  border-radius: 24px;
-} */
-
-/* .navbar__searchInput {
-  height: 12px;
-  padding: 10px;
-  border: light;
-  width: 100%;
-} */
-
-.upperNavBar__options {
-  font-size: 10px;
-  font-weight: 500;
-  margin: 20px;
+  overflow: hidden;
 }
 
 .black {
