--- a/src/styles/upperNavBar.css
+++ b/src/styles/upperNavBar.css
@@ -6,9 +6,11 @@
 .nav-icon {
   padding: 3px;
   color: black;
-  font-size: 2.4em;
+  font-size: 2.2em;
   margin-right: 10px;
   margin-left: 10px;
+  padding-top: 0.2em;
+  vertical-align: -0.5em;
   transition: box-shadow 0.4s;
 }
 
@@ -20,4 +22,29 @@
 
 .navbar-right {
   float: right;
+}
+
+.navbar-right .hamburger-icon {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-icon {
+    display: none;
+  }
+
+  .searchbar {
+    display: none;
+  }
+
+  .search-icon {
+    display: none;
+  }
+
+  .navbar-right .hamburger-icon {
+    display: block;
+    color: black;
+    padding-top: 0.2em;
+    font-size: 2.2em;
+  }
 }
